Bugs Corrigidos e ainda falta loop mas o exercicio esta conforme o solicitado